<resources>
    <string name="app_name">Driver Assistance</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="simplifyingyourlife"> Simplifying Your life</string>
    <string name="toast_network_not_available">Network not available</string>
    <string name="register">Register</string>
    <string name="ph_register">SIGN IN</string>
    <string name="powered_by">POWERED BY</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="please_enter_your_phone_no">Please Enter your phone no</string>
    <string name="please_enter_valid_number">Please enter valid number</string>
    <string name="title_activity_activity_home">ActivityHome</string>
    <string name="hello_world">Hello world!</string>
    <string name="status">-</string>
    <string name="test_drive_addr_booking_name">-</string>
    <string name="service">Service</string>
    <string name="service_interested_in">Service Interested in</string>
    <string name="price_request_details">Price Request Details</string>
    <string name="text_order_details">Order Details</string>
    <string name="change_service">Change Service Type</string>
    <string name="change_car">Change Car Type</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="update">UPDATE STATUS</string>
    <string name="info">Info</string>
    <string name="status_update">Status Update</string>
    <string name="clicktochange">Click To Edit</string>
    <string name="tap_left_right">Swipe Left/Right </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back"> Back </string>
    <string name="otp">Otp</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="otp_message">We\'ve sent you a One Time Password to:</string>
    <string name="otp_hint">Enter the OTP</string>
    <string name="verify">Verify</string>
    <string name="otp_error_message">Oops! Something went wrong. Please try Again</string>
    <string name="select_city">City</string>
    <string name="city_select">Select City</string>
    <string name="valid_till">Valid till :</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_setting">Settings</string>
    <string name="lead">LEAD</string>
    <string name="leads">LEADS</string>
    <string name="proceed">Proceed</string>
    <string name="ScheduleValidation">Are you sure you want to Schedule on this time ?</string>
    <string name="callwasnotpicked">The Call Was Not Picked</string>
    <string name="callwaspicked">The Call Was Picked</string>
    <string name="schedulecallback">to schedule callback, click below options</string>
    <string name="callafter_1hr">CALL AFTER 1HR</string>
    <string name="scheduleback">Schedule CallBack</string>
    <string name="booking_request">Appointment Request</string>
    <string name="custome_notInterested">Customer Not Interested ?</string>
    <string name="marklost">MarkLost</string>
    <string name="scheduletestdrive">Schedule TestDrive</string>
    <string name="callafter_2hr">CALL AFTER 2HR</string>
    <string name="schedule_callback">Reschedule Callback</string>
    <string name="ph_hint">9000000000</string>
    <string name="next_date">Next Activity:</string>
    <string name="last_date">Last Activity:</string>
    <string name="appointment">Appointment</string>
    <string name="callback">Callback</string>
    <string name="service_type">Service Type</string>
    <string name="service_package">Package</string>
    <string name="package_price">Price</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="need_pick_up">Need Pick Up</string>
    <string name="need_drop_of">Need Drop Off</string>
    <string name="set_date_time">Click to set Date and Time</string>
    <string name="servicing_completed">Servicing Completed</string>
    <string name="plus_nine_one">+91</string>
    <string name="call_log">Call Log</string>
    <string name="search">Search</string>
    <string name="contact">Contact Name</string>
    <string name="contactNo">Contact No</string>
    <string name="title_activity_call_log">CallLogActivity</string>
    <string name="want_to_add">Want to Add Contact ?</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add</string>
    <string name="no">No</string>
    <string name="google_maps_key">AIzaSyBddvAvLKYfarsg3qgBFnxM9TaSkEfaWiY</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Latitude or longnitude</string>
    <string name="no_address_found">No Address found</string>
    <string name="address_found">Address Found</string>
    <string name="FetchAddressService">Fetch Location</string>
    <string name="lms">LMS</string>
    <string name="enter_correct_otp">Please Enter Correct OTP</string>
    <string name="hint_search_lead">Enter Lead Name</string>
    <string name="search_lead">Search Lead Result</string>
    <string name="next_activity">Next Activity :</string>
    <string name="last_activity">Last Activity :</string>
    <string name="lead_closed">"This lead is closed." </string>
    <string name="emailId">Email Id</string>
    <string name="city">City</string>
    <string name="pin">Pin</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="car">Car</string>
    <string name="save">Save</string>
    <string name="phoneNumber">Phone No</string>
    <string name="activityHistory">Activity History</string>
    <string name="enterEmailAddress">Enter Email Address</string>
    <string name="enterPriceQuoted">Enter Price Quoted</string>
    <string name="selectCarModel">Select Car Model</string>
    <string name="carModel">Car Model</string>
    <string name="egCarModel">E.g. Maruti Swift</string>
    <string name="saveAndContinue">Save &amp; Continue</string>
    <string name="selectServiceNeeds">Select Service Needs</string>
    <string name="scheduledMaintenance">Scheduled Maintenance</string>
    <string name="carWash">Car Wash</string>
    <string name="other">Other</string>
    <string name="pickupAddress">Pickup Address</string>
    <string name="locationhint">e.g MG Road, Gurgaon</string>
    <string name="selectCustomerLocation">Location</string>
    <string name="provideRepairDetails">Provide Repair Details</string>
    <string name="enterCustomerDetails">Enter Customer Details</string>
    <string name="enterFollowupDetails">Follow up Details</string>
    <string name="priceQuoted">Price Quoted</string>
    <string name="generalCarMaintenance">General Car Maintenance</string>
    <string name="tyreWheelRepair">Tyre/Wheel Repair</string>
    <string name="batteryRepair">Battery Repair</string>
    <string name="bodyPaintWork">Body &amp; paint work</string>
    <string name="brakeRepair">Brake Repair</string>
    <string name="clutchRepair">Clutch repair</string>
    <string name="checkEngineLightOn">Check Engine Light ON</string>
    <string name="carNotStarting">Car not Starting</string>
    <string name="acRepair">AC Repair</string>
    <string name="fluidFlushes">Fluids Flushes</string>
    <string name="steeringSuspension">Steering/Suspension</string>
    <string name="inspectionDiagnostics">Inspection/Diagnostics</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="cantFindWhatYouNeed">Can\'t find what you need? Please describe your requirements.</string>
    <string name="enter_contact_name">Enter Contact Name</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_price_quote">Enter Price Quote</string>
    <string name="lead_exist">This lead already exist in database. Do you want to move to the lead ?</string>
    <string name="yes">yes</string>
    <string name="pleaseSelectDateForAppointment">Please select a date for appointment.</string>
    <string name="pleaseSelectDateForFollowup">Please select a date for callback.</string>
    <string name="pleaseSelectMakeModalFromListing">Please select a valid car from listing.</string>
    <string name="pleaseSelectCustomerLocationFromListing">Please select a valid location from listing.</string>
    <string name="text_first_car_choice">maruti 800</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Lost Lead</item>
        <item>RSA</item>
        <item>@string/insurance</item>
        <item>Capture Lead</item>
        <item>Logout</item>
    </string-array>
    <string name="loadingApplicationData">Loading...</string>
    <string name="gcm_defaultSenderId">618986946417</string>
    <string name="no_internet_connection">Either you have no internet connection or slow internet connection.So you may not have correct data.</string>
    <string name="lead_requested_callback">Lead requested Callback</string>
    <string name="followup">Follow Up</string>
    <string name="busy">Number Busy</string>
    <string name="switchedoff">Switched Off</string>
    <string name="not_responding">Not Responding</string>
    <string name="not_reachable">Not Reachable</string>
    <string name="not_clear">Voice Not Clear</string>
    <string name="disconnect">Call Got Disconnected</string>
    <string name="schedule_appointment">Schedule an Appointment</string>
    <string name="lead_lost">Lead Lost</string>
    <string name="not_interested">Not interested</string>
    <string name="do_not_call">Do Not Call</string>
    <string name="not_connected">Not Connected</string>
    <string name="send_whatsapp">Send Message</string>
    <string name="pass_lead_to_call_center">Pass lead to call center</string>
    <string name="closed">Closed</string>
    <string name="service_complete">Service Complete</string>
    <string name="service_incomplete">Service Incomplete</string>
    <string name="lead_issues">Lead Issues</string>
    <string name="whatsappnotinstalled">Whats app not installed</string>
    <string name="leadIssue">Lead Issue</string>
    <string name="leadScheduledToday">Lead Scheduled Today</string>
    <string name="appointmentScheduledCaps">APPOINTMENT SCHEDULED</string>
    <string name="appointmentMissedCaps">APPOINTMENT MISSED</string>
    <string name="appointmentNeededCaps">TO BE SCHEDULED</string>
    <string name="appointmentClosedCaps">APPOINTMENT CLOSED</string>
    <string name="appointmentScheduled">Appointment Scheduled</string>
    <string name="appointmentMissed">Appointment Missed</string>
    <string name="appointmentNeeded">To Be Scheduled</string>
    <string name="appointmentClosed">Appointment Closed</string>
    <string name="customerMissed">Customer Missed</string>
    <string name="newLeads">New Leads</string>
    <string name="followUps">Follow Ups</string>
    <string name="today">TODAY</string>
    <string name="later">Show Calendar</string>
    <string name="pickUpRequired">Pick up required</string>
    <string name="activities">ACTIVITIES</string>
    <string name="last">LAST</string>
    <string name="next">NEXT</string>
    <string name="serviceDetails">SERVICE DETAILS</string>
    <string name="invalidDate">Invalid Date. Please check.</string>
    <string name="invalidRoleType">Invalid Role id. Please check.</string>
    <string name="wrongViewPassed">Wron view has been passed. Please check.</string>
    <string name="R.string.cancel">Cancel</string>
    <string name="resend_otp_message">Waiting to receive OTP for %s seconds</string>
    <string name="server_down">Oops!!Something went wrong.Please try again.</string>
    <string name="capture_lead_name">Name*</string>
    <string name="capture_lead_phoneNumber">Phone Number*</string>
    <string name="capture_lead_emailId">Email*</string>
</resources>