<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rly_top"
        style="@style/matchWidth">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/dimen_five"
            android:background="@drawable/selector_inform_cardekho_button"
            android:padding="5dp"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_Otp"
            style="@style/wrap"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dimen_five"
            android:gravity="center"
            android:text="@string/otp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_size_twenty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_reSendOtp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/dimen_five"
            android:layout_marginTop="3dp"
            android:background="@drawable/selector_inform_cardekho_button"
            android:enabled="false"
            android:padding="5dp"
            android:text="@string/resend_otp"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/orange" />

    <LinearLayout
        style="@style/matchWidth"
        android:layout_margin="@dimen/dimen_ten"
        android:background="@drawable/white_rounded_bg"
        android:orientation="vertical"
        android:padding="@dimen/dimen_ten">

        <TextView
            style="@style/matchWidth"
            android:layout_height="@dimen/dimen_forty"
            android:text="@string/otp_message"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_mobileNumber"
            style="@style/matchWidth"
            android:layout_height="@dimen/dimen_thirty"
            android:gravity="center"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edt_otpCode"
            style="@style/matchWidth"
            android:layout_height="@dimen/dimen_forty"
            android:background="@drawable/grey_rounded_bg"
            android:hint="@string/otp_hint"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="@dimen/dimen_ten"
            android:textColorHint="@android:color/black" />

        <TextView
            android:id="@+id/resend_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/resend_otp_message" />

        <Button
            android:id="@+id/btn_verify"
            style="@style/headings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_forty"
            android:layout_marginTop="@dimen/dimen_twenty"
            android:background="@drawable/selector_blue_button"
            android:text="@string/verify"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />


    </LinearLayout>

</LinearLayout>